--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="frontPage styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-..." crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -96,13 +98,20 @@
     </section>
 
 
-   <nav>
-    <button>Chat</button>
-    <button>Workouts</button>
-    <button>Profile</button>
-
-   </nav>
-
+    <nav class="bottom-nav">
+        <a href="#chat" class="nav-item">
+            <i class="fas fa-comment"></i>
+            <span>Chat</span>
+        </a>
+        <a href="#create-workouts" class="nav-item">
+            <i class="fas fa-dumbbell"></i>
+            <span>Workouts</span>
+        </a>
+        <a href="#profile" class="nav-item">
+            <i class="fas fa-user"></i>
+            <span>Profile</span>
+        </a>
+    </nav>
 
 
 
