--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <header>
         <img src="images/calfitlab logo.png"></img>
-        <a herf=""></a>
     </header>
 
 
@@ -36,7 +35,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="" class="btn-link">Create a new workout</a>
+                        <a href="/Workout creator 1.html" class="btn-link">Create a new workout</a>
 
                     </div>
 
@@ -104,7 +103,7 @@
             <i class="fas fa-comment"></i>
             <span>Chat</span>
         </a>
-        <a href="../workouts.html" class="nav-item">
+        <a href="/workouts.html" class="nav-item">
             <i class="fas fa-dumbbell"></i>
             <span>Workouts</span>
         </a>
