--- a/workouts.html
+++ b/workouts.html
@@ -17,13 +17,13 @@
 <body>
 
     <header>
-        <a href="../index.html"><img src="images/calfitlab logo.png"></img></a>
+        <a href="/index.html"><img src="images/calfitlab logo.png"></img></a>
         </a>
     </header>
 
     <section class="container">
         <div class="create-new-workout" id="create-new-workout">
-            <a href="../Workout creator 1.html">
+            <a href="/Workout creator 1.html">
                 <p>Create New Workout</p>
             </a>
 
