--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>frontpage</title>
     <meta charset="UTF_8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="frontPage styles.css">
+    <link rel="stylesheet" href="index styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -21,26 +21,20 @@
     </header>
 
 
-    <section id="workouts" class="section">
+    <section id="today-workout" class="section">
         <div class="container">
-            <h2 class="carousel-title">Your workouts</h2>
+            <h2 class="carousel-title">Today's Workout</h2>
             <div class="carousel-wrapper">
-                <div class="carousel">
-                    <div class="card">
-                        <h3>My bulking Workout</h3>
-                        <a href="https://web.archive.org/web/20230717035301/https://calfitlab.com/nutrition-on-a-budget-affordable-nutrition-for-calisthenics-enthusiasts/"
-                            class="btn-link">
-                            Read More
-                        </a>
-                    </div>
+                <div class="carousel" id="today-workout-carousel"></div>
+            </div>
+        </div>
+    </section>
 
-                    <div class="card">
-                        <a href="/Workout creator 1.html" class="btn-link">Create a new workout</a>
-
-                    </div>
-
-
-                </div>
+    <section id="your-workout" class="section">
+        <div class="container">
+            <h2 class="carousel-title">Your Workouts</h2>
+            <div class="carousel-wrapper">
+                <div class="carousel" id="your-workout-carousel"></div>
             </div>
         </div>
     </section>
@@ -103,7 +97,7 @@
             <i class="fas fa-comment"></i>
             <span>Chat</span>
         </a>
-        <a href="/workouts.html" class="nav-item">
+        <a href="workouts page.html" class="nav-item">
             <i class="fas fa-dumbbell"></i>
             <span>Workouts</span>
         </a>
@@ -118,18 +112,51 @@
 
 
     <script>
-        /* carousel logic */
         document.addEventListener("DOMContentLoaded", () => {
-            const Carousel = document.querySelector(".carousel");
-            const cardWidth = Carousel.querySelector(".card").offsetWidth + 16;
+            const workouts = JSON.parse(localStorage.getItem("workouts")) || [];
 
-            Carousel.addEventListener("wheel", (event) => {
-                Carousel.scrollBy({
-                    left: event.deltaY * 3,
-                    behavior: "smooth",
-                });
-            });
+            const todayCarousel = document.getElementById("today-workout-carousel");
+            const yourWorkoutsCarousel = document.getElementById("your-workout-carousel");
+
+            // Populate Today's Workouts
+            populateTodayWorkouts(workouts, todayCarousel);
+
+            // Populate All Workouts in Your Workouts Section
+            populateAllWorkouts(workouts, yourWorkoutsCarousel);
         });
+
+        function populateTodayWorkouts(workouts, carousel) {
+            const today = new Date().toLocaleString("en-US", { weekday: "long" }).toLowerCase();
+            const todaysWorkouts = workouts.filter(workout => workout.day.toLowerCase() === today);
+            if (todaysWorkouts.length > 0) {
+                todaysWorkouts.forEach(workout => {
+                    carousel.appendChild(createWorkoutCard(workout, "Start Workout"));
+                });
+            } else {
+                carousel.innerHTML = "<p>No workout scheduled for today.</p>";
+            }
+        }
+
+        function populateAllWorkouts(workouts, carousel) {
+            if (workouts.length > 0) {
+                workouts.forEach(workout => {
+                    carousel.appendChild(createWorkoutCard(workout, "Read More"));
+                });
+            } else {
+                carousel.innerHTML = "<p>No workouts available.</p>";
+            }
+        }
+
+        function createWorkoutCard(workout, actionText) {
+            const card = document.createElement("div");
+            card.classList.add("card");
+            card.innerHTML = `
+        <h3>${workout.name}</h3>
+        <div>Exercises: ${workout.exercises.join(', ')}</div>
+        <a href="#" class="btn-link">${actionText}</a>
+    `;
+            return card;
+        }
     </script>
 
 </body>
