--- a/workout.html
+++ b/workout.html
@@ -5,7 +5,7 @@
     <title>Today's Workout</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="workout page styles.css">
+    <link rel="stylesheet" href="workout styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
